<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dip" >

    <TextView
        android:id="@+id/tvConfLev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_lev" />

    <SeekBar
        android:id="@+id/sbConfLev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/confText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/nullValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvCapFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cap_freq" />

    <SeekBar
        android:id="@+id/sbCapFreq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/capFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/nullValue"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/cbAuRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/au_res"
        android:checked="false" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>