<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CACAFF"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/swipeView"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:background="#990077CC"
        android:gravity="center"
        android:text="@string/swipeText"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/swipeView"
        android:layout_below="@+id/textView1"
        android:layout_toLeftOf="@+id/transButton"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/transButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/searchText"
        android:text="@string/button" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/swipeView"
        android:layout_alignLeft="@+id/swipeView"
        android:layout_alignRight="@+id/swipeView"
        android:layout_below="@+id/changeLang"
        android:background="#9F99CCFF" >

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translation"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />

    </ScrollView>

    <RadioGroup
        android:id="@+id/changeLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchText"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/radbtn1"
            android:textColor="@android:color/black" />

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/radbtn0"
            android:textColor="@android:color/black" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/dictionary_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

</RelativeLayout>