<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/instructionView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/instruction1" 
        android:contentDescription="@string/tutorial_image"
        android:scaleType="fitXY"
        />

    <Button
        android:id="@+id/startButton"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@drawable/start_download"
        android:gravity="center"
        android:text="@string/camera_activity"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@drawable/start_download"
        android:gravity="center"
        android:text="@string/download"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</RelativeLayout>